# docapi-tools

./: .gitignore  README.md  pyproject.toml
assets/: api_template_clean.xlsx  template_clean.xlsx
configs/: project_config.json  provider_config.json
data/: business_glossary.sqlite
dist_test/: docapi_tools-0.1.0-py3-none-any.whl
docs/: docapi-cli-distribution.md  docapi-cli-quickstart.md
scripts/: __init__.py  analyze_code.py  api_config_schema.py  api_quality_gate.py  batch_api_spec.py  build_api_config_from_analysis.py  build_ui_config_from_analysis.py  business_glossary.py  config_schema.py  docapi_cli.py  export_api_spec.py  extract_api_inventory.py  generate_api_spec.py  generate_from_template.py  generate_spec.py  gitnexus_adapter.py  provider_audit.py  provider_config.py  release_tools.py  repair_api_run.py  review_api_run.py  runtime_support.py  validate_api_workbook.py  validate_spec.py
scripts/providers/: __init__.py  ollama_provider.py
skills/web-ui-spec/: SKILL.md
skills/web-ui-spec/references/: code2excel-protocol.md  config-generation-rules.md  format-spec.md  generation-workflow.md  quality-criteria.md  writing-guide.md
skills/web-ui-spec/samples/: sample_config.json  (+2 more)
tests/: test_api_output_naming.py  test_api_quality_gate.py  test_api_workbook_validation.py  test_build_api_config_from_analysis.py  test_docapi_distribution.py  test_docapi_export_pipeline.py  test_docapi_generate_smoke.py  test_docapi_ollama_provider.py  test_docapi_provider_config.py  test_docapi_review_repair.py  test_docapi_scan.py  test_generate_analysis_artifacts.py
(+10 files in other folders)
